Fix shell command syntax in workflow

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -10,7 +10,7 @@ jobs:
         run: echo "Hello World" 
       - name: Checking out code
         uses: actions/checkout@v4
-         sh "content.txt"
+         sh cat "content.txt"
 
 
     
