Modify workflow to list files and display content.txt
Updated the workflow to display contents of content.txt.

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -11,7 +11,9 @@ jobs:
       - name: Checking out code
         uses: actions/checkout@v4
       - name: Displaying the code
-        run : ls -ltr
+        run: |
+            ls -ltr
+            cat content.txt
       
 
 
