Enhance workflow to print GitHub run number
Added echo command to display GitHub run number.

--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,7 +24,9 @@ jobs:
      runs-on: ubuntu-latest
      steps:
        - name: "Information"
-         run: echo "${{ toJSON(github) }}"
+         run: |
+           echo "${{ toJSON(github) }}"
+           echo "${{ github.run_number }}"
          
     
           
